Fixed redirect and puzzle select cutoff

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,7 @@ a {
   display: inline-block;
   user-select: none;
   border-radius: 20px;
+  overflow: hidden;
 }
 
 @media (max-width: 600px) { /* small screens */
@@ -73,6 +74,7 @@ a {
   .selectWrapper {
     padding: 0px;
     outline: none;
+    overflow: hidden;
   }
 }
 
